# clip_reid

./: .gitignore  LICENSE  README.md  download_data.py  evaluate.py  predict.py  preprocess_data.py  pyproject.toml  requirements.txt  train.py  wyscout.ipynb
.devcontainer/: devcontainer.json  devcontainer_init.sh  devcontainer_postcreate.sh
.pymarvel/: aws_sso_login.sh  build_tokens.sh  copy_files_to_devbox.sh  log_devcontainer_event.sh  prepare_mounts.sh
clipreid/: dataset.py  evaluator.py  loss.py  metrics.py  model.py  rerank.py  trainer.py  transforms.py  utils.py
